--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
     text-align: center;
   }
   h2 {
-    font-type: sans-serif;
+    font-family: sans-serif;
   }
   p {
-    font-type: sans-serif;
+    font-family: sans-serif;
   }
