--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ body {
 .topnav {
   background-color; #333
   overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
 }
 .topnav a {
   float: left;
