--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ body {
 .topnav {
   background-color; #333
   overflow: hidden;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 50%;
+  margin-right: 50%;
 }
 .topnav a {
   float: left;
