--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
   float: left;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px;
   font-size; 17px;
 }
 .topnav a:hover {
