--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
 .topnav a {
   float: left;
   color: #f2f2f2;
+  margin-left: 50%;
   text-align: center;
   padding: 14px;
   font-size; 17px;
@@ -33,7 +34,4 @@ body {
 .topnav a.active {
   background-color: #04AA6D;
   color: white;
-}
-.topnav li {
-  text-align: center;
 }
