--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,8 @@ body {
   text-align: center;
   padding: 14px 16px;
   font-size; 17px;
+  display: flex;
+  justify-content: center;
 }
 .topnav a:hover {
   background-color: #ddd;
