--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,9 @@ body {
   float: left;
   color: #f2f2f2;
   text-align: center;
-  text-decoration: none;
   padding: 14px 16px;
-  font-size; 17px;
+  text-decoration: none;
+  font-size: 17px;
 }
 .topnav a:hover {
   background-color: #ddd;
