--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@ body {
 }
 .topnav a {
   float: left;
-  margin: auto;
+  margin-left: 30%;
+  margin-right: 70%;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
