--- a/styles.css
+++ b/styles.css
@@ -14,23 +14,6 @@
 body {
   background-color: #ffbf80;
 }
-.topnav {
-  background-color; #333
-  overflow: hidden;
-}
-.topnav a {
-  float: left;
-  color: #f2f2f2;
+nav {
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
 }
