--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ nav {
 }
 ul {
   list-style: none;
-  display: flex;
+  display: inline-block;
   text-align: center;
   margin: auto;
   padding: 14px 16px;
