--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 nav {
   text-align: center;
 }
-#nav ul {
+.nav ul {
   list-style: none;
   display: inline-block;
   text-align: center;
