--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,7 @@
 .center {
   text-align: center;
 }
-body {
-  background-color: #ffbf80;
-}
-.nav ul {
+.center ul {
   list-style: none;
   display: inline-block;
   text-align: center;
@@ -23,3 +20,5 @@ body {
   width: auto;
   float: left;
 }
+body {
+  background-color: #ffbf80;
