--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,16 @@
 body {
   background-color: #ffbf80;
 }
-  .nav {
+  ul {
   list-style: none;
   display: inline-block;
-  text-align: center;
+  position: relative;
   margin: auto;
   padding: 14px 16px;
   width: auto;
   float: left;
   }
+div {
+  width: 100%
+  text-align: center
+}
