--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
   list-style: none;
   display: inline-block;
   position: relative;
+  text-align: center;
   margin: auto;
   padding: 14px 16px;
   width: auto;
