--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
 }
 .page {
   width: 80%;
-  background-color: #ffbf80
+  background-color: #ffbf80;
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
