--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,8 @@ body {
 .page {
   width: 80%;
   background-color: #ffbf80;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10%;
+  margin-right: 10%;
   padding: 20px;
   max-width: 500px;
 }
