--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
 .page {
   width: 80%;
   background-color: #ffbf80;
-  margin-left: auto%;
-  margin-right: auto%;
+  margin-left: auto;
+  margin-right: auto;
   padding: 20px;
 }
