--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
   text-align: center;
 }
 body {
-  background-image: url (https://finchington.github.io/modern.jpg);
+  background-image: url (modern.jpeg);
   padding: 20px;
   font-family: sans-serif
 }
