--- a/styles.css
+++ b/styles.css
@@ -36,4 +36,8 @@ body {
 .page {
   background-color: #ffbf80;
   width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom:0;
 }
