--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,6 @@ body {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 0;
-  margin-bottom:0;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
