--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,8 @@
-  h1 {
-    font-family: sans-serif;
-    text-align: center;
-  }
-  h2 {
-    font-family: sans-serif;
-  }
-  p {
-    font-family: sans-serif;
-  }
 .center {
   text-align: center;
 }
 body {
-  background-image: url (https://finchington.github.io/modern.jpeg);
+  background-image: url (https://finchington.github.io/images/modern.jpeg);
   padding: 20px;
   font-family: sans-serif
 }
@@ -36,6 +26,7 @@ body {
 .page {
   background-color: #ffbf80;
   width: 80%;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
