--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 body {
-  background-image: url (https://finchington.github.io/images/modern.jpeg);
+  background-image: url (https://finchington.github.io/modern.jpeg);
   padding: 20px;
   font-family: sans-serif
 }
