--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 body {
-  background-image: url (https://finchington.github.io/modern.jpeg);
+  background-image: url (https://finchington.github.io/modern.jpg);
   padding: 20px;
   font-family: sans-serif
 }
@@ -29,6 +29,6 @@ body {
   height: 100%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
