--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 body {
-  background-image: url (modern.jpg);
+  background-image: url (https://finchington.github.io/modern.jpg);
   padding: 20px;
   font-family: sans-serif
 }
@@ -26,7 +26,7 @@ body {
 .page {
   background-color: #ffbf80;
   width: 80%;
-  min-height: 100%;
+  min-height: -100%;
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
