--- a/styles.css
+++ b/styles.css
@@ -31,5 +31,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
-  margin-bottom: auto;
+  margin-bottom: 500px;
+  padding: 20px;
 }
