--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 body {
   background-image: url(https://finchington.github.io/modern.jpg);
   background-size: 100%;
+  background-attachment: scroll;
   padding: 20px;
   font-family: sans-serif
 }
