--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   background-image: url(https://finchington.github.io/modern.jpg);
   background-size: 100%;
   background-attachment: scroll;
+  background-repeat: no-repeat;
   padding: 20px;
   font-family: sans-serif
 }
