--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,12 @@ body {
   margin-bottom: 500px;
   padding: 20px;
 }
+.menu-content {
+    font-family: sans-serif; 
+    padding: 0 0 0 50px;
+    text-align: right;
+}.Info {
+    background-color: rgb(255, 255, 255);
+    padding: 0px 30px;
+    border-bottom: 3px solid #CDE700;
+    box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
