--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,10 @@ body {
     font-family: sans-serif; 
     padding: 0 0 0 50px;
     text-align: right;
-}.Info {
+}
+.Info {
     background-color: rgb(255, 255, 255);
     padding: 0px 30px;
     border-bottom: 3px solid #CDE700;
     box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+  ]
