--- a/styles.css
+++ b/styles.css
@@ -48,4 +48,7 @@ body {
     padding: 0px 30px;
     border-bottom: 3px solid #CDE700;
     box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
-  ]
+}
+header {
+  text-align: center;
+}
