--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
-  margin-bottom: 500px;
+  margin-bottom: 0px;
   padding: 20px;
 }
 .menu-content {
@@ -49,7 +49,7 @@ body {
     border-bottom: 3px solid #CDE700;
     box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
 }
-.Info label {
+.menu {
   text-align: right;
 }
 header h1 {
