--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body {
     border-bottom: 3px solid #CDE700;
     box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
 }
-.menu {
+#menu {
   text-align: right;
 }
 header h1 {
