--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
 .menu-content {
     font-family: sans-serif; 
     padding: 0 0 0 50px;
-    text-align: right;
+    text-align: left;
 }
 .Info {
     background-color: rgb(255, 255, 255);
