--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,17 @@ body {
     border-bottom: 3px solid #CDE700;
     box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
 }
+.Info label {
+  font-family: sans-serif;
+  font-size: 56px;
+  display: block;
+  cursor: pointer;
+  background: url(menu.png) no-repeat left center;
+  padding: 10px 0 10px 50px;
+}
+input#Info {
+    display: none;
+}
 header h1 {
   text-align: center;
 }
