dumb baby mistake 3

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body {
   font-size: 56px;
   display: block;
   cursor: pointer;
-  background: url(https://finchington.github.io/infobox.png) no-repeat left center;
+  background: url(https://finchington.github.io/infoutton.png) no-repeat left center;
   padding: 10px 0 10px 50px;
 }
 input#menu {
