--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,8 @@ body {
   padding: 20px;
 }
 .menu-content {
+    max-height: 0;
+    overflow: hidden;
     font-family: sans-serif; 
     padding: 0 0 0 50px;
 }
@@ -48,7 +50,7 @@ body {
   font-size: 56px;
   display: block;
   cursor: pointer;
-  background-image: url(https://finchington.github.io/infoutton.png);
+  background-image: url(https://finchington.github.io/infobutton.png);
   padding: 10px 0 10px 50px;
 }
 input#menu {
@@ -56,4 +58,9 @@ input#menu {
 }
 header h1 {
   text-align: center;
+}
+input:checked ~ label {
+    background-image: url(https://finchington.github.io/infobutton.png);
+}input:checked ~ .menu-content {
+    max-height: 100%;
 }
