--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ body {
   display: block;
   cursor: pointer;
   background-image: url(https://finchington.github.io/infobutton.png);
+  background-repeat: no-repeat;
   padding: 10px 0 10px 50px;
 }
 input#menu {
