--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
   font-size: 56px;
   display: block;
   cursor: pointer;
-  background-image: url(https://finchington.github.io/infobutton.png);
+  background: url(https://finchington.github.io/infobutton.png) no-repeat left center;
   background-repeat: no-repeat;
   padding: 10px 0 10px 50px;
 }
@@ -61,7 +61,8 @@ header h1 {
   text-align: center;
 }
 input:checked ~ label {
-    background-image: url(https://finchington.github.ioinfobutton.png);
+    background-image: url(https://finchington.github.io/infobutton.png);
+  background-repeat: no-repeat;
 }
 input:checked ~ .menu-content {
     max-height: 100%;
