--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
   font-size: 56px;
   display: block;
   cursor: pointer;
-  background: url(https://finchington.github.io/infobutton.png)
+  background: url(https://finchington.github.io/infobutton.png);
   background-repeat: no-repeat;
   background-position: left center;
   padding: 10px 0 10px 50px;
