--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,9 @@ header h1 {
 }
 input:checked ~ label {
     background: url(https://finchington.github.io/infobuttonopen.png);
+    background-repeat: no repeat;
+    background-position: left center;
+    padding: 10px 0 10px 50px;
 }
 input:checked ~ .menu-content {
     max-height: 100%;
