--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 body {
-  background-image: url(https://finchington.github.io/modern.jpg);
+  background-image: url(https://finchington.github.io/images/backdrops/modern.jpg);
   background-size: 100%;
   min-height: 100%;
   background-attachment: fixed;
