Get that castle wall up

--- a/content/fantasy/fantasystyle.css
+++ b/content/fantasy/fantasystyle.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  background-image: fantasy.jpg;
+  backgroundimage: url(https://finchington.github.io/images/backdrops/fantasy.jpg);
 }
 
 .page {
