--- a/content/fantasy/fantasystyle.css
+++ b/content/fantasy/fantasystyle.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  background-image: url(https://finchington.github.io/images/backdrops/fantasy.jpg);
+  background-image: url(https://finchington.github.io/fantasy.jpg);
 }
 
 .page {
