--- a/content/fantasy/fantasystyle.css
+++ b/content/fantasy/fantasystyle.css
@@ -12,3 +12,53 @@ body {
   margin-bottom: 0;
   padding: 20px;
 }
+
+.nav {
+  border: 1px solid #ccc;
+  border-width: 1px 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.nav li {
+  display: inline;
+}
+
+.nav a {
+  display: inline-block;
+  padding: 10 px;
+}
+.menu-content {
+  max-height: 0;
+  overflow: hidden;
+  font-family: sans-serif;
+  padding: 0 0 0 50 px;
+}
+
+.infobox label {
+  font-family: sans-serif;
+  font-size: 30px;
+  display: block;
+  cursor: pointer;
+  background: url(https://finchington.github.io/images/infobutton.png);
+  background-repeat: no-repeat;
+  background-position: left center;
+  padding: 10px 0 10px 50px;
+}
+input#menu {
+    display: none;
+}
+header h1 {
+  text-align: center;
+}
+input:checked ~ label {
+    background: url(https://finchington.github.io/images/infobuttonopen.png);
+    background-repeat: no-repeat;
+    background-position: left center;
+    padding: 10px 0 10px 50px;
+}
+input:checked ~ .menu-content {
+    max-height: 100%;
+}
