--- a/content/modern/modernstyle.css
+++ b/content/modern/modernstyle.css
@@ -36,6 +36,7 @@ body {
   margin-top: auto;
   margin-bottom: 0px;
   padding: 20px;
+  white-space: pre-wrap;
 }
 .menu-content {
     max-height: 0;
