--- a/content/modern/modernstyle.css
+++ b/content/modern/modernstyle.css
@@ -4,6 +4,7 @@
 header {
   background-color: #ffbf80;
   width: 80%;
+  text-align: center;
 }
 body {
   background-image: url(https://finchington.github.io/images/backdrops/modern.jpg);
