--- a/content/modern/modernstyle.css
+++ b/content/modern/modernstyle.css
@@ -1,5 +1,11 @@
 .center {
   text-align: center;
+  }
+header {
+  background-color: #ffbf80;
+  width: 80%;
+  text-align: center;
+}
 body {
   background-image: url(https://finchington.github.io/images/backdrops/modern.jpg);
   background-size: 100%;
